# bookstore-backend

./: .gitignore  API_ENDPOINTS.md  CHANGELOG.md  Dockerfile  FEATURES_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  QUICK_START.md  docker-compose.yml  pyproject.toml  readme.md  requirements.txt  schema.yml
apps/admin_panel/: admin.py  models.py
apps/admin_panel/migrations/: 0001_initial.py
apps/books/: admin.py  models.py  serializers.py  urls.py  views.py
apps/books/migrations/: 0001_initial.py  0002_bookreview_similarbook_book_image_2_book_image_3_and_more.py
apps/common/: models.py  settings_model.py
apps/common/migrations/: 0001_initial.py  0002_delete_author_delete_genre_delete_publisher.py
apps/copies/: apps.py  serializers.py
apps/couriers/: admin.py  apps.py  models.py
apps/couriers/migrations/: 0001_initial.py
apps/notifications/: choices.py  models.py  serializers.py  urls.py  views.py
apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_notification_type.py
apps/payments/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py
apps/queues/: admin.py  models.py  serializers.py  urls.py  views.py
apps/queues/migrations/: 0001_initial.py
apps/rentals/: choices.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/subscriptions/: choices.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
bookstore/: settings.py  urls.py
(+8 files in other folders)
