[project]
name = "bookstore"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.5",
    "django-allauth>=65.17.0",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "requests>=2.32.3",
]
